添加AI项目 添加APP7.3项目

--- a/ApiTest/report.html
+++ b/ApiTest/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,40132],[[4,5,6,0,[],[1,24,40091],[[7,8,9,0,[],[1,28,40068],[],[[10,0,1,0,[],[1,442,1575],[]],[11,0,1,0,[],[1,2017,1128],[]],[12,0,1,0,[],[1,3145,1093],[]],[13,0,1,0,[],[1,4238,1099],[]],[14,0,1,0,[],[1,5338,1094],[]],[15,0,1,0,[],[1,6432,1138],[]],[16,0,1,0,[],[1,7571,1116],[]],[17,0,1,0,[],[1,8688,1111],[]],[18,0,1,0,[],[1,9800,1101],[]],[19,0,1,0,[],[1,10902,1098],[]],[20,0,1,0,[],[1,12001,1096],[]],[21,0,1,0,[],[1,13097,1638],[]],[22,0,1,0,[],[1,14736,1542],[]],[23,0,1,0,[],[1,16281,1526],[]],[24,0,1,0,[],[1,17808,1113],[]],[25,0,1,0,[],[1,18921,1095],[]],[26,0,1,0,[],[1,20017,1095],[]],[27,0,1,0,[],[1,21112,1101],[]],[28,0,1,0,[],[1,22214,1111],[]],[29,0,1,0,[],[1,23325,1100],[]],[30,0,1,0,[],[1,24426,1133],[]],[31,0,1,0,[],[1,25559,1101],[]],[32,0,1,0,[],[1,26661,1113],[]],[33,0,1,0,[],[1,27775,1112],[]],[34,0,1,0,[],[1,28887,1116],[]],[35,0,1,0,[],[1,30004,3250],[]],[36,0,1,0,[],[1,33255,1113],[]],[37,0,1,0,[],[1,34369,2067],[]],[38,0,1,0,[],[1,36437,1334],[]],[39,0,1,0,[],[1,37772,1151],[]],[40,0,1,0,[],[1,38924,1166],[]]],[],[31,31,31,31]]],[],[],[31,31,31,31]]],[],[],[31,31,31,31]];
+window.output["suite"] = [1,2,3,0,[],[0,0,2004],[[4,5,4,0,[],[0,20,1982],[[6,7,8,0,[],[0,21,1980],[],[[9,0,1,0,[],[0,591,1407,10],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ApiTest","*/Users/songxiao/git/repository/ApiTest","*.","*作为辅导","*/Users/songxiao/git/repository/ApiTest/作为辅导","*%E4%BD%9C%E4%B8%BA%E8%BE%85%E5%AF%BC","*Zwtools Online Api","*/Users/songxiao/git/repository/ApiTest/作为辅导/zwtools_online_api.robot","*%E4%BD%9C%E4%B8%BA%E8%BE%85%E5%AF%BC/zwtools_online_api.robot","*首页","*作文详情(id=336263)","*作文详情(id=)","*作文详情(id=-1)","*作文详情(id=&quot;336263&quot;)","*作文列表筛选项-范文(cate=1)","*作文列表筛选项-素材(cate=2)","*作文列表筛选项-写作技巧(cate=3)","*作文列表筛选项(cate=0)","*作文列表筛选项(cate=)","*作文列表筛选项(cate=&quot;1&quot;)","*作文列表","*作文列表(cate=1&amp;limit=1)","*作文列表(type=22@小说&amp;grade=5@五年级)","*单元作文详情","*单元作文详情(id=)","*单元作文详情(id=&quot;2&quot;)","*单元作文列表筛选项","*单元作文列表(grade_term=3_2@三年级下)","*单元作文列表(grade_term=4_2@四年级下)","*用户添加收藏(添加一个收藏artid=336263)","*用户收藏作文分组列表","*用户收藏作文列表(检查&quot;total&quot;:1)","*用户添加收藏(继续添加一个收藏artid=258710)","*用户收藏作文列表(检查&quot;total&quot;:2)","*用户取消全部收藏","*用户收藏作文列表(检查&quot;total&quot;:0)","*搜索热词","*搜索","*搜索(grade=100)","*分组筛选+搜索"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ApiTest","*/Users/songxiao/git/repository/ApiTest","*.","*APP7.3","*/Users/songxiao/git/repository/ApiTest/APP7.3","*App7.3 Api","*/Users/songxiao/git/repository/ApiTest/APP7.3/app7.3_api.robot","*APP7.3/app7.3_api.robot","*“今日必读”聚合页","*'{\"errcode\":500,\"errmsg\":\"java.lang.IllegalArgumentException: 根据分类id【null】无法查询到实体\",\"objects\":null,\"meta\":null}' does not contain '\"errcode\":0'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"Critical Tests","pass":31},{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":31}],[],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"ApiTest","name":"ApiTest","pass":31},{"elapsed":"00:00:40","fail":0,"id":"s1-s1","label":"ApiTest.作为辅导","name":"作为辅导","pass":31},{"elapsed":"00:00:40","fail":0,"id":"s1-s1-s1","label":"ApiTest.作为辅导.Zwtools Online Api","name":"Zwtools Online Api","pass":31}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:01","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:02","fail":1,"id":"s1","label":"ApiTest","name":"ApiTest","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"ApiTest.APP7.3","name":"APP7.3","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1-s1","label":"ApiTest.APP7.3.App7.3 Api","name":"App7.3 Api","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1547792344766;
+window.output["baseMillis"] = 1548348462728;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 40255;
+window.output["generated"] = 2016;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
